implement getOneAccount
